# PopularRepositoriesAnalysis

./: .editorconfig  .gitignore  README.md  pyproject.toml
analysis/: repositories.ipynb  users.ipynb
data/: repositories-by-forks.json  repositories-by-stars.json  repositories.json  users-by-followers.json  users-by-repositories.json
scraper/: main.py  manual.py  repositories.py  users.py
